--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
         <title>Vite App</title>
     </head>
     <body>
-        <div id="app"></div>
-        <script type="module" src="src/main.js"></script>
+        <script type="module" src="src/main.js">
+            a
+        </script>
     </body>
 </html>
